--- a/style.css
+++ b/style.css
@@ -9,8 +9,8 @@
     justify-content: space-between;
     background-color: slategray;
     padding: 5px;
-}
-.nav-title{
+    position: fixed;
+    width: 100%;
 }
 .nav-links{
     display: flex;
